HYDRAN-1432: Update Garbage to handle multiple schedules for an address
